[package]
name = "korekto"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-runtime = "0.35.1"
shuttle-axum = "0.35.1"
shuttle-secrets = "0.35.1"
shuttle-shared-db = { version = "0.35.1", features = ["postgres"] }

axum = {version = "0.6.20", features = ["headers"] }
axum-extra = { version = "0.8.0", features = ["cookie-private", "cookie-key-expansion"] }

tokio = "1.34.0"
sqlx = { version = "0.7.2", features = ["runtime-tokio-rustls", "postgres", "macros", "json", "time"] }

tracing = "0.1.40"
tower-http = { version = "0.4.4", features = ["fs"] }
tower-service = "0.3"

# locked from Axum 0.6.20 using `impl IntoResponse for StatusCode`
hyper = "0.14.27"
tower = "0.4.13"
http = "0.2.9"

anyhow = "1.0.75"
oauth2 = "4.4.2"
time = { version = "0.3.30", features = ["serde"] }
serde = "1.0.192"
lru = "0.12.0"
octocrab = "0.32.0"
jsonwebtoken = "9.1.0"
uuid = { version = "1.5.0", features = ["v4", "fast-rng"] }


[features]
debug_http_ex = []
