[package]
name = "korekto"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
shuttle-runtime = "0.43.0"
shuttle-axum = "0.43.0"
shuttle-shared-db = { version = "0.43.0", features = ["postgres", "sqlx"] }

axum = {version = "0.7.5"}
axum-extra = { version = "0.9.3", features = ["cookie-private", "cookie-key-expansion", "typed-header"] }

tokio = "1.37.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros", "json", "time"] }

tracing = "0.1.40"

headers = "0.4.0"
hyper = "1.3.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tower-service = "0.3"
http = "1.1.0"

anyhow = "1.0.82"
oauth2 = "4.4.2"
time = { version = "0.3.36", features = ["serde"] }
serde = "1.0.197"
lru = "0.12.3"
octocrab = "0.38.0"
jsonwebtoken = "9.3.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
assert_matches2 = "0.1.2"
